// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Factory component render should render a sizes query component 1`] = `
<form>
  <SizesQuery
    Component={[Function]}
    ErrorWrapper={[Function]}
    LoadingWrapper={[Function]}
  />
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Factory component render should render an ingredient query component if size value is truthy 1`] = `
<form>
  <SizesQuery
    Component={[Function]}
    ErrorWrapper={[Function]}
    LoadingWrapper={[Function]}
  />
  <IngredientsQuery
    Component={[Function]}
    ErrorWrapper={[Function]}
    LoadingWrapper={[Function]}
    size="LARGE"
  />
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`Ingredients component render should render a checkbox group form field component 1`] = `
<Fragment>
  <FormField
    isFieldArray={true}
    list={
      Array [
        Object {
          "label": "option 1 (1)",
          "value": 1,
        },
        Object {
          "label": "option 2 (2)",
          "value": 2,
        },
        Object {
          "label": "option 3 (3)",
          "value": 3,
        },
      ]
    }
    maxAllowed={2}
    name="toppings"
    type="checkbox_group"
  />
</Fragment>
`;

exports[`Sizes component render should render a select form field component 1`] = `
<FormField
  name="size"
  options={
    Array [
      "option 1",
      "option 2",
      "option 3",
      "option 4",
    ]
  }
  placeholder="Select pizza size"
  type="select"
/>
`;
